Добавлены бронирования и комментарии в ShareIt
Реализована сущность Booking с аннотациями JPA, таблица bookings в schema.sql (добавлены новые DTO)
Добавлена сущность Comment с аннотациями JPA, таблица comments в schema.sql
Реализованы сущности Item и User с аннотациями JPA, таблицы items и users в schema.sql
Были добавлены тесты для Comment и исправлены тесты для других сущностей
Постман тесты проходят